--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
+    "react-router": "^6.11.2",
+    "react-router-hash-scroll": "^0.2.7",
     "react-scripts": "^2.1.3",
     "web-vitals": "^2.1.4"
   },
